fix: resolve SonarCloud blocker/high/medium/low issues on main
- fix NPE risk in webhook sync when workspace has no source URL
- add missing assertions in RepoWebhookSyncSchedulerTest
- add explicit rollbackFor to RepoWebhookSyncJob transaction
- extract duplicated string literals into constants (VCS webhook/discovery services)
- normalize JobVia enum names while preserving persisted/display values
- convert field injection to constructor injection across Elide checks and services
- replace catch(Throwable) with catch(Exception) in OrganizationManageHook
- return empty array instead of null in AzDevOpsWebhookService
- remove dead/commented-out code and stale comments
- convert string concatenation to text blocks in several services/tests
- replace Collectors.toList() with .toList(), Thread.sleep with TimeUnit.sleep
- collapse duplicate PrCommentServiceTest cases into a parameterized test
- fix lambda with multiple throwing invocations in VcsRepositoryDiscoveryFacadeTest
- misc low-severity cleanup: unnamed patterns, instanceof pattern matching,
  regex character classes, redundant throws, JUnit4->5 assertions